@@ -28,7 +28,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)ext.h	1.3 (gritter) 8/9/05
+ * Sccsid @(#)ext.h	1.4 (gritter) 11/29/05
  */
 
 /*
@@ -49,3 +49,5 @@ extern long	lineno;			/* line number */
 extern long	position;		/* byte position */
 extern char	*prog_name;		/* and program name - for errors */
 extern char	*temp_file;		/* temporary file - for some programs */
+
+extern int	LanguageLevel;		/* language level of generated PS */
